--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             <h1 id="Mozez">MOZEZ</h1>
             <nav class="side-nav">
         <ul>
-            <li><a href="#Home"><h4>Home</h4></a></li>
-            <li><a href="#about"><h4>About</h4></a></li>
-            <li><a href="#service"><h4>Service</h4></a></li>
-            <li><a href="#portfolio"><h4>Portfolio</h4></a></li>
-            <li><a href="#blog"><h4>Blog</h4></a></li>
-            <li><a href="#contact"><h4>Contact</h4></a></li>
+            <li><img src="Assets/Image/icons8-home-64.png"  alt="home page" width="20" height="20"><a href="#Home">Home</a></li>
+            <li><img src="Assets/Image/icons8-profile-30.png" width="20" height="20"> <a href="#about">About</a></li>
+            <li><img src="Assets/Image/icons8-list-50 (1).png"width="20" height="20">  <a href="#service">Service</a></li>
+            <li><img src="Assets/Image/icons8-briefcase-50.png"width="20" height="20">  <a href="#portfolio">Portfolio</a></li>
+            <li><img src="Assets/Image/icons8-briefcase-50.png"width="20" height="20">  <a href="#blog">Blog</a></li>
+            <li><img src="Assets/Image/icons8-instagram-logo-30.png"width="20" height="20">  <a href="#contact">Contact</a></li>
         </ul>
     </nav>
         </aside>
@@ -106,6 +106,48 @@
                         </div>
                     </div>
                 </section>
+                <section class="edu-ex-section">
+                    <section class="education">
+                        <h2>Education</h2>
+                        <section class="education-container">
+                            <div class="edu-content">
+                            <img src="Assets/Image/icons8-calendar-50.png" width="20" height="20" alt=""><p>2013 - 2015</p>
+                            <h3>Master In Computer Science</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p>
+                        </div>
+                            <div class="edu-content">
+                                 <img src="Assets/Image/icons8-calendar-50.png" width="20" height="20" alt=""><p>2013 - 2015</p>
+                            <h3>Master In Computer Science</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p>
+                            </div>
+                            <div class="edu-content">
+                                 <img src="Assets/Image/icons8-calendar-50.png" width="20" height="20" alt=""><p>2013 - 2015</p>
+                            <h3>Master In Computer Science</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p>
+                            </div>
+                        </section>
+                    </section>
+                    <section class="experience">
+                        <h2>Experience</h2>
+                        <section class="experience-container">
+                        <div class="edu-content">
+                            <img src="Assets/Image/icons8-calendar-50.png" width="20" height="20" alt=""><p>2013 - 2015</p>
+                            <h3>Master In Computer Science</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p>
+                        </div>
+                            <div class="edu-content">
+                                 <img src="Assets/Image/icons8-calendar-50.png" width="20" height="20" alt=""><p>2013 - 2015</p>
+                            <h3>Master In Computer Science</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p>
+                            </div>
+                            <div class="edu-content">
+                                 <img src="Assets/Image/icons8-calendar-50.png" width="20" height="20" alt=""><p>2013 - 2015</p>
+                            <h3>Master In Computer Science</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p>
+                            </div>
+                            </section>
+                    </section>
+                </section>
             </section>
             
             <section id="service" class="items service">
@@ -181,31 +223,62 @@
                      <div id="bar2"></div>
                         <section class="blog-section">
                             <div class="blog1">
-                                <section class="blog-pic1">4 jun 2020</section>
+                                <section class="blog-pic1"><h4 class="date">4 jun 2020</h4></section>
                                 <section class="blog-text1">
-                                    <h3>Responsive Web Design</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, porro rem quod illo quam, eum alias id, repellendus magni, quas.</p>
-                                    <p>Tags : Html , css</p>
+                                    <h3 class="HD"><P>Responsive Web Design</P></h3>
+                                    <p class="HD2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, porro rem quod illo quam, eum alias id, repellendus magni, quas.</p>
+                                    <p class="HD3">Tags :<span class="tag"> Html , css</span></p>
                                 </section>
                             </div>
                             <div class="blog1">
-                                <section class="blog-pic2">4 jun 2020</section>
-                                <section class="blog-text2"><h3>Creative Slideshow</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, porro rem quod illo quam, eum alias id, repellendus magni, quas.</p>
-                                <p>Tags : Html , Javascript</p>
+                                <section class="blog-pic2"><h4 class="date">4 jun 2020</h4></section>
+                                <section class="blog-text1"><h3 class="HD"><p>Creative Slideshow</p></h3>
+                                <p class="HD2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, porro rem quod illo quam, eum alias id, repellendus magni, quas.</p>
+                                <p class="HD3">Tags :<span  class="tag"> Html , Javascript</span></p>
                                 </section>
                             </div>
                             <div class="blog1">
-                                <section class="blog-pic3">4 jun 2020</section>
-                                <section class="blog-text3"><h3>Image Gallery Lightbox</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, porro rem quod illo quam, eum alias id, repellendus magni, quas.</p>
-                            <p>Tags : Javascript</p>
+                                <section class="blog-pic3"><h4 class="date">4 jun 2020</h4></section>
+                                <section class="blog-text1"> <h3 class="HD"><p>Image Gallery Lightbox</p></h3>
+                                <p class="HD2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, porro rem quod illo quam, eum alias id, repellendus magni, quas.</p>
+                            <p class="HD3"><span class="tag"> Tags : Javascript </span></p>
                         </section>
                             </div>
                         </section>
                      </section>
 
-            <section id="contact" class="items contact">Contact</section>
+            <section id="contact" class="items contact">
+            <section class="contact"><h1>Contact</h1>
+                    <div id="bar"></div>
+                     <div id="bar2"></div>
+                     <section class="contact-container">
+                        <div class="contact1"><img src="Assets/Image/icons8-telephone-48.png">
+                        <h3>Call Us On</h3>
+                    <p>+91 8800 000 000</p></div>
+
+                        <div class="contact1"><img src="Assets/Image/icons8-location-50.png">
+                        <h3>Office</h3>
+                        <P>44 Street, New Delhi, India</P>
+                        </div>
+                        <div class="contact1">
+                            <img src="Assets/Image/icons8-message-50.png">
+                            <h3>Email</h3>
+                            <p>info@gmail.com</p>
+                        </div>
+                     </section>
+                        <form>
+                            <section class="name">
+                                <input type="text" name="Name" placeholder="Name">
+
+                                 <input type="email" name="Email" placeholder="Email">
+
+                            </section>
+                            <input class="text1" type="text" name="Subject" placeholder="Subject">
+                            <input class="text2" type="text" name="messages" placeholder="your messages">
+                            <button class="submit btn">send message</button>
+                        </form>
+                    </section>
+                     </section>
         </section>
         </section>
         </section>
